pkg/util/routing/testdata/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: csdp-ingress
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: test-runtime-internal-router-ingress
  namespace: test-runtime
spec:
  ingressClassName: alb
  rules:
  - host: testing.foo.bar.com
    http:
      paths:
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /webhooks
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /workflows
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /app-proxy
        pathType: Prefix
