pkg/util/routing/testdata/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-runtime-internal-router-ingress
  namespace: test-runtime
spec:
  ingressClassName: nginx
  rules:
  - host: testing.foo.bar.com
    http:
      paths:
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /webhooks
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /workflows
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /app-proxy
        pathType: Prefix
